--- a/archivo.css
+++ b/archivo.css
@@ -1,13 +1,15 @@
 section{
     text-align: center;
     color:blue;
-}
-#navbarSupportedContent{
-    text-align: center;
-    color: seagreen;
-}
+} 
+     #navbarSupportedContent{
+       text-align: center;
+        color: seagreen;
+    }
+
 
 .section{
     opacity: 1;
     transition: opacity 3s;
+    color: red;
 }
